2009-08-13  Per Bothner  <per@bothner.com>

	* CompileNamedPart.java: New class - compilation/optimization-related
	methods for GetNamedPart and SetNamedPart.
	* Makefile.am: Update accordingly.
	* GetNamedPart.java: Keep only runtime-specific parts.
	* SetNamedPart.java: Likewise.

2009-08-12  Per Bothner  <per@bothner.com>

	* CompilationHelpers.java: New class.
	Used for inlining specific procedures.
	* Makefile.am: Update accordingly.
	* ApplyToArgs.java: No longer implements CanInline.
	(inline):  Replaced by CompilationHelpers.inlineApplyToArgs.
	* Setter.java: No longer implements CanInline.
	(inline):  Replaced by CompilationHelpers.inlineSetter.
	(class SetArrayExp, class SetListExp): Moved to CompilationHelpers.
	* IsEqv.java: No longer implements CanInline.
	(inline):  Replaced by CompilationHelpers.inlineIsEqv.
	* AddOp.java (pairwise): Use InlineCalls.maybeInline.

	* ArithOp.java (getReturnKind): New method.
	(compile): Minor efficiency tweak.

2009-06-28  Per Bothner  <per@bothner.com>

	* ValuesMap.java (inline): Update for new inlining framework.
	(compileInlined): Likewise.

2009-06-02  Per Bothner  <per@bothner.com>

	* UnicodeUtils.java: New helper class,
	(isWhitespace): New method, used for char-whitespace?.
	(capitalize): New method, used for string-titlecase.
	(foldCase): New method, used for string-foldcase.
	(generalCategory): New method, used for char-general-category.
	* Makefile.am: Update according.

2009-03-07  Per Bothner  <per@bothner.com>

	* LispFormat.java (printChar): Using using hex rather than octal.

	* DisplayFormat.java (writeReadableSymbol (overloaded x2)): Rename to -
	(writeSymbol (overloaded x2)): and change to take 'readable' paramater.
	Add test for language-dependent handling of Keywords.

2009-02-17  Per Bothner  <per@bothner.com>

	* Convert.java (compile): When the target type isn't known at
	compile-time, coerce it to LangObjType.typeClassType so either
	Class or Type will be allowed.
