@@ -1,3 +1,9 @@
+2009-08-15  Per Bothner  <per@bothner.com>
+	    Helmut Eller  <eller.helmut@gmail.com>
+
+	* misc-check: New test based on Savannah bug #27257
+	"non-int dim. spec. in emitNewArray".
+
 2009-08-10  Per Bothner  <per@bothner.com>
 
 	* Makefile.am (KAWARTLIB): New variable.
